--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "glob": "^8.1.0",
     "vite": "^4.0.5"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Mudrova Olga <mudrova.om@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "izitoast": "^1.4.0",
